[package]
name = "russty_pass"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
csv = "1.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
ratatui = "0.26.3"
crossterm = "0.27.0"
pbkdf2 = "0.12.2"
rand = "0.8.5"
tempfile = "3.10.1"
dirs = "5.0.1"

argon2 = "0.5.3"
chacha20poly1305 = "0.11.0-rc.3"
rand_core = "0.6.4"
password-strength = "1.0.0"


